fix(docker): fix dockerfile entrypoint command